--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <p class="section-subtitle">Confira alguns sites que desenvolvemos para negócios locais como o seu.</p>
                 <div class="portfolio-grid">
                     <div class="portfolio-card">
-                       <a href="https://lacerdagb.github.io/OficinaDoDiguinhov2/" target="_blank"><img src="img/oficinadodiguinho.png" alt="Projeto Oficina do Diguinho"></a> 
+                       <a href="https://www.oficinadodiguinho.com.br" target="_blank"><img src="img/oficinadodiguinho.png" alt="Projeto Oficina do Diguinho"></a> 
                         <div class="portfolio-info">
                             <h3>Oficina do Diguinho</h3>
                             <p>Landing page para oficina de motos, focada em serviços e credibilidade local.</p>
@@ -282,7 +282,7 @@
             <div class="container">
                 <h2>Vamos dar <span>tração</span> ao seu negócio?</h2>
                 <p class="section-subtitle">Chega de perder clientes para a concorrência. Fale comigo agora pelo WhatsApp e receba uma proposta sem compromisso.</p>
-                <a href="https://wa.me/[SEUNUMERODOWHATSAPP]?text=Olá!%20Vi%20o%20site%20da%20Tração%20Web%20e%20gostaria%20de%20um%20orçamento." target="_blank" class="cta-button whatsapp">
+                <a href="https://wa.me/5521974477338?text=Olá!%20Vi%20o%20site%20da%20Tração%20Web%20e%20gostaria%20de%20um%20orçamento." target="_blank" class="cta-button whatsapp">
                     <i class="fab fa-whatsapp"></i> SOLICITAR ORÇAMENTO</a>
             </div>
         </section>
